# trainsum

./: .readthedocs.yaml  README.rst  pyproject.toml
docs/: conf.py  crossoptions.rst  decompositionoptions.rst  digit.rst  dimension.rst  domain.rst  eigsolver.rst  einsumexpression.rst  evaluateexpression.rst  evaluationoptions.rst  exactoptions.rst  examples.rst  getting_started.rst  gmres.rst  gmresresult.rst  index.rst  lanczos.rst  lanczosresult.rst  linearmap.rst  linsolver.rst  localeigsolver.rst  localeigsolverresult.rst  locallinsolver.rst  locallinsolverresult.rst  matrixdecomposition.rst  matrixdecompositionresult.rst  matrixeigenvaluedecomposition.rst  matrixleastsquares.rst  minmaxresult.rst  qrdecomposition.rst  requirements.txt  stub.txt  svdecomposition.rst  svdecompositionresult.rst  sweepingstrategy.rst  tensortrain.rst  trainshape.rst  trainsum.rst  uniformgrid.rst  variationaloptions.rst
examples/: MNIST.ipynb  heat_equation.ipynb  hydrogen_atom.ipynb  inverse.ipynb
tests/: test_construct.py  test_cos.py  test_digit.py  test_dimension.py  test_domain.py  test_eigsolver.py  test_einsum.py  test_exp.py  test_full.py  test_io.py  test_linsolver.py  test_minmax.py  test_options.py  test_polyval.py  test_qft.py  test_qftfreq.py  test_qftshift.py  test_qrdecomposition.py  test_shift.py  test_sin.py  test_svdecomposition.py  test_tensortrain.py  test_trainshape.py  test_uniformgrid.py  utils.py
trainsum/: __init__.py  add.py  additioncore.py  amensolver.py  array_namespace.py  backend.py  conj.py  construct.py  contains.py  contractor.py  contractorinput.py  coreslicing.py  (+79 more)
(+4 files in other folders)
