[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trainsum"
description = "A Python package for dealing with quantics tensor trains"
readme = "README.rst"

version = "0.0.1"
authors = [
  { name = "Paul Haubenwallner" },
]

requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.2",
    "h5py>=3.15.1",
    "array_api_compat>=1.13.0",
    "opt_einsum>=3.4.0"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

license = "EUPL-1.2"
license-files = ["LICENSE.txt"]

keywords = ["quantics", "tensor train", "tensor network", "quantum inspired"]

[project.urls]
Repository = "https://github.com/fh-igd-iet/trainsum"
