[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trainsum"
description = "A Python package for dealing with quantics tensor trains"
readme = "README.rst"

version = "0.0.1"
authors = [
  { name = "Paul Haubenwallner" },
]

requires-python = ">=3.14"
dependencies = [
    "numpy",
    "h5py",
    "array_api_compat",
    "opt_einsum"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

license = "EUPL-1.2"
license-files = ["LICENSE.txt"]

keywords = ["quantics", "tensor train", "tensor network", "quantum inspired"]

[project.urls]
Repository = "https://github.com/fh-igd-iet/trainsum"
Documentation = "https://trainsum.readthedocs.io"
